--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: "^0.5.0"
   firebase_auth: "^0.18.1"
+  firebase_database: ^4.1.1
   cloud_firestore:
   google_maps_flutter:
   location:
