--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   geocoder:
   flutter_google_places:
   geoflutterfire: ^2.2.1
+  shared_preferences: ^0.5.12
+  flutter_spinkit: ^4.1.2
+
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +62,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
