--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   geoflutterfire: ^2.2.1
   shared_preferences: ^0.5.12
   flutter_spinkit: ^4.1.2
+  firebase_messaging: ^5.0.2
 
 
 dev_dependencies:
