--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyC_MPgcB-GAIUYap_caF_lQdB1UqFIEhMg"/>
+            android:value="API-KEY"/>
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
